aws-pvc.yaml

apiVersion: v1
kind: Pod

metadata:
  name: ebs-mount-container

spec:

  containers:
    - name: ebs-mount-container
      image: busybox
      args: [ "tail", "-f", "/dev/null"]
      volumeMount:
      - name: ebs-volume
        mountPath: /mnt

  volumes:
  - name: ebs-volume
    persistentVolumeClaim:
      claimName: my-ebs-pvc
