resource-limit-and-request.yaml
apiVersion: v1
kind: Pod
metadata:
  name: Test-pod
  labels:
    name: Test-pod
spec:
  containers:
    - name: Test-container
      image: image-name
      resources:
        limits:                       # 최대 요구사항
          memory: "512Mi"
          cpu: "1000m"
        requests:                     # 최고 요구사항
          memory: "215Mi"
          cpu: "500m"                 # 500밀리세컨드를 의미한다.

# kubectl describe pod Test-pod 를 통해 non terminated pod 에서 자원 사용량 확인 가능
# request를 통해 오버커밋이 가능하다.
# 이유는 다른 파드가 limit보다 적게 사용하고 request를 충족한다면 다름 파드가 LIMIT만큼 더 사용할수있다.
